# homelab-dashboard

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html
src/: main.rs
src/frontend/: alerts.rs  app.rs  app_shell.rs  certificates.rs  current_page.rs  generations.rs  hosts.rs  menu_state.rs  mod.rs  models.rs  routing.rs  tasks.rs  theme.rs  up.rs
src/frontend/components/: app_header.rs  menu_item.rs  mod.rs  overview_dashboard.rs  overview_info_card.rs  overview_status_card.rs  side_menu.rs  summary_grid.rs  summary_line.rs  summary_panel.rs  theme_selector.rs
src/frontend/pages/: alerts.rs  certificates.rs  generations.rs  hosts.rs  loading.rs  login.rs  mod.rs  overview.rs  tasks.rs  up.rs  uptime.rs
src/server/: auth.rs  cache.rs  config.rs  handlers.rs  metrics.rs  mod.rs  models.rs  util.rs
