[package]
name = "rust-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8.9"
openidconnect = { version = "4", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tower-sessions = "0.15.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
leptos = { version = "0.8.19", features = ["csr"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "History", "Document", "Element", "Storage"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"
